@@ -347,6 +347,20 @@ search.index.11 = id:identifier.*
 webui.submit.enable-cc = false
 
 
+#### OAI-PMH settings #####
+# Max response size for DIDL. This is the maximum size in bytes of the files you
+# wish to enclose Base64 encoded in your responses, remember that the base64
+# encoding process uses a lot of memory. We recommend at most 200000 for answers
+# of 30 records each on a 1 Gigabyte machine. Ultimately this will change to a
+# streaming model and remove this restriction. Also please remember to allocate
+# plenty of memory, at least 512 MB to your Tomcat.
+#
+# Optional: DSpace uses 100 records as the limit for the oai responses. You can
+# alter this by changing $DSPACE_SOURCE_DIR/src/org/dspace/app/oai/DSpaceOAICatalog.java to modify the
+# declaration:
+# private final int MAX_RECORDS = 100 to private final int MAX_RECORDS = 30
+# oai.didl.maxresponse = 0
+
 #### Proxy Settings ######
 # uncomment and specify both properties if proxy server required
 # proxy server for external http requests - use regular hostname without port number
